windAnalyis/paperFigures/intermediateCalculations/p-14295979.out
  File "calculateSSTsouthof50.py", line 81
    v.name = .votemper.isel(deptht=0).
             ^
SyntaxError: invalid syntax
